# live-life

./: .gitignore  README.md  Start-LiveLife.cmd  Start-LiveLife.vbs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: apple_reminders_bridge.py  build-app.ps1  dev-app.ps1  install-reminders-deps.ps1  regenerate-app-icon.py  requirements-reminders.txt  setup-deps.ps1  start-app.ps1  sync-app-icon.ps1
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  process_util.rs
src-tauri/src/caldav/: client.rs  delete.rs  mod.rs  parse.rs  rrule_expand.rs  xml.rs
src-tauri/src/icloud_reminders/: client.rs  mod.rs  runtime.rs
src-tauri/windows/: hooks.nsh
src/components/bucketlist/: BucketlistPanel.tsx
src/components/calendar/: CalendarEventChip.tsx  CalendarView.tsx  EventModal.tsx  (+5 more)
src/hooks/: useAppBoot.ts  useAppState.ts  useFitGridPagination.ts  useReminderSuggestionLimit.ts  useSyncOnClose.ts
src/i18n/: LocaleProvider.tsx  accountSummary.ts  translate.ts  types.ts
src/lib/: appleReminderListOptions.ts  appleRemindersAccount.ts  backgroundSync.ts  caldavAccount.ts  caldavPresets.ts  calendarDisplay.ts  challengeDisplay.ts  dataBackup.ts  developerMode.tsx  errorReport.ts  icons.ts  manualSync.ts  openExternalLink.ts  scheduledRewards.ts  startupDevLog.ts  startupSync.ts  syncAuthIssues.ts  syncOutbox.ts  theme.tsx  visionBoardConnectors.ts
src/pages/: CalendarPage.tsx
(+48 files in other folders)
